# thought_police

./: README.md
.cursor/: mcp.json
backend/: README_MCP.md  agent_actions.db  agent_example.py  create_db.py  database.py  main.py  mcp_server.py  models.py  pyproject.toml  requirements.txt  schema.py  seed_data.py  test_text_analyzer.py  text_analyzer.py
chain_documentation/: chain_documentation.py  hello.py  pyproject.toml
cot_police/: hello.py  pyproject.toml  streaming_test.py  test_streaming.sh
extractor/: README.md  claude_guidance_agent_observer.txt  pyproject.toml  server.py  test_direct.sh  test_sse.sh  yolo_prompt_cursor.txt
frontend/: .gitignore  package.json
frontend/app/: page.tsx
frontend/components/: ActionFlow.tsx  ActionNode.tsx  TraceSelector.tsx
frontend/lib/: apollo-client.ts  types.ts
frontend/lib/graphql/: queries.ts
supply-chain-tracker/: README.md  main.py  requirements.txt
