[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "mcp>=1.4.1",
    "sqlalchemy>=2.0.39",
    "strawberry-graphql[debug,debug-server]>=0.262.5",
    "uvicorn[standard]>=0.34.0",
]
